Fix Netlify build configuration and remove unused imports

--- a/Backend/frontend/netlify.toml
+++ b/Backend/frontend/netlify.toml
@@ -1,6 +1,7 @@
 # Netlify Build Configuration
 [build]
-  publish = "build"
+  base = "Backend/frontend"
+  publish = "Backend/frontend/build"
   command = "npm run build"
 
 [[redirects]]
